# minishell

./: .compilation_test.swp  .gitignore  CMakeLists.txt  Makefile  README.md  a.out  bags  compilation_test  enviroment.c  enviroment_utils.c  execute.c  export.c  f  f2  file  file1  file100  file2  file3  handler.c  helper.c  list_utils.c  ls  lsh  main.c  minishell  minishell.h  parse_function.c  parser.c  pipe_test.c  redirection_parser.c  redirection_parser_utils.c  shell_join.c  shell_loop.c  shell_split.c  str_utils.c  test  test.c  unset.c  utils.c  (+1 more)
GNL/: get_next_line.c  get_next_line.h  get_next_line_utils.c
a.out.dSYM/Contents/Resources/DWARF/: a.out
include/: get_next_line.h  libft.h  minishell.h
libft/: Makefile  ft_lstclear.c  ft_split.c  ft_strcmp.c  ft_strncmp.c  libft.h
lsh.dSYM/Contents/: Info.plist
lsh.dSYM/Contents/Resources/DWARF/: lsh
minishell.dSYM/Contents/Resources/DWARF/: minishell
parser/: a.out  environment_parser.c  environment_parser_2.c  free.c  list_utils.c  parse_quotes.c  parse_slash.c  parse_spec.c  parser_lists.c  parser_lists_2.c  parsing.c  redirection_list.c  redirection_parser.c  redirection_parser_utils.c  redirections.c  redirections.h  redirections_2.c  shell_split.c  shell_split_2.c  shell_split_utils.c  shell_split_utils_2.c  split.c  split_nodes.c  split_nodes_utils.c  str_utils.c
shell_loop/: echo.c  enviroment_utils.c  enviroment_utils2.c  execute.c  export.c  handler.c  launch.c  parse_function.c  pipe_dup.c  shell_loop.c  unset.c
